--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -18,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…“ - Regex to find wrong ones: ('|”|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -430,6 +432,7 @@
     <string name="lbl_select_fields">Zvolit pole</string>
     <string name="lbl_select_website">Vyberte web.:</string>
     <string name="option_bug_report">Hlášení chyb</string>
+    <string name="lbl_author_pseudonym">Pseudonym autora</string>
     <string name="lbl_series">Série</string>
     <string name="lbl_series_multiple">Série</string>
     <string name="lbl_series_num">#</string>
@@ -737,4 +740,5 @@
     <string name="lbl_country">Země</string>
     <string name="pt_search_show_shopping_options">Zobrazit nákupní nabídky</string>
     <string name="lbl_standardize">Standardizovat</string>
+    <string name="lbl_author_pseudonym_of_X">ps. %1$s</string>
 </resources>
