--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -18,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -421,6 +423,7 @@
     <string name="lbl_select_fields">Επιλεγξτε πεδία</string>
     <string name="lbl_select_website">Επιλέξτε έναν ιστότοπο:</string>
     <string name="option_bug_report">Αναφορά σφαλμάτων</string>
+    <string name="lbl_author_pseudonym">Ψευδώνυμο συγγραφέα</string>
     <string name="lbl_series">Σειρές</string>
     <string name="lbl_series_multiple">Σειρά</string>
     <string name="lbl_series_num">#</string>
@@ -731,4 +734,5 @@
     <string name="lbl_country">Χώρα</string>
     <string name="pt_search_show_shopping_options">Εμφάνιση μενού αγορών</string>
     <string name="lbl_standardize">Τυποποιώ</string>
+    <string name="lbl_author_pseudonym_of_X">ψε. %1$s</string>
 </resources>
