--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -18,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…”  - Regex to find wrong ones: ('|“|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -434,6 +436,7 @@
     <string name="lbl_select_fields">Wybierz pola</string>
     <string name="lbl_select_website">Wybierz stronę internetową:</string>
     <string name="option_bug_report">Zgłoszenie błędu</string>
+    <string name="lbl_author_pseudonym">Pseudonim autora</string>
     <string name="lbl_series">Seria</string>
     <string name="lbl_series_multiple">Serial</string>
     <string name="lbl_series_num">tom#</string>
@@ -741,4 +744,5 @@
     <string name="lbl_country">Kraj</string>
     <string name="pt_search_show_shopping_options">Pokaż menu zakupów</string>
     <string name="lbl_standardize">Ujednolicić</string>
+    <string name="lbl_author_pseudonym_of_X">ps. %1$s</string>
 </resources>
