--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -18,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -437,6 +439,7 @@
     <string name="lbl_select_fields">Выберите поля</string>
     <string name="lbl_select_website">Выберите сайт:</string>
     <string name="option_bug_report">Отчет об ошибке</string>
+    <string name="lbl_author_pseudonym">Псевдоним автора</string>
     <string name="lbl_series">Серия</string>
     <string name="lbl_series_multiple">Серии</string>
     <string name="lbl_series_num">№</string>
@@ -744,4 +747,5 @@
     <string name="lbl_country">Страна</string>
     <string name="pt_search_show_shopping_options">Показать меню покупок</string>
     <string name="lbl_standardize">стандартизировать</string>
+    <string name="lbl_author_pseudonym_of_X">пс. %1$s</string>
 </resources>
