--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -429,6 +429,7 @@
     <string name="lbl_select_fields">Alanları seçin</string>
     <string name="lbl_select_website">Bir web sitesi seçin:</string>
     <string name="option_bug_report">Hata raporu</string>
+    <string name="lbl_author_pseudonym">Yazar takma adı</string>
     <string name="lbl_series">Dizi</string>
     <string name="lbl_series_multiple">Dizi</string>
     <string name="lbl_series_num">#</string>
@@ -739,4 +740,5 @@
     <string name="lbl_country">Ülke</string>
     <string name="pt_search_show_shopping_options">Alışveriş menülerini göster</string>
     <string name="lbl_standardize">Standardize et</string>
+    <string name="lbl_author_pseudonym_of_X">ta. %1$s</string>
 </resources>
